--- a/factor_analysis.ipynb
+++ b/factor_analysis.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0368af99",
+   "metadata": {},
+   "source": [
+    "Các bước Phân tích nhân tố:\n",
+    "1. Làm sạch dữ liệu, biến các cột định tính thành định lượng, chuẩn hoá dữ liệu z-score\n",
+    "2. Kiểm định dữ liệu có phù hợp với FA (KMO test, Barlett test)\n",
+    "3. Tính giá trị riêng, vector riêng, phương sai giải thích (sắp xếp lớn -> bé) và phương sai tích luỹ\n",
+    "4. Chọn số nhân tố\n",
+    "5. Tính ma trận hệ số tải\n",
+    "6. Xoay nhân tố để đưa ma trận hệ số tải về dạng dễ đọc (dễ thấy nhìn ra nhóm)\n",
+    "7. Đặt tên nhân tố\n",
+    "8. Điểm nhân tố"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "415aafbc",
