--- a/factor_analysis.ipynb
+++ b/factor_analysis.ipynb
@@ -11,7 +11,7 @@
     "3. Tính giá trị riêng, vector riêng, phương sai giải thích (sắp xếp lớn -> bé) và phương sai tích luỹ\n",
     "4. Chọn số nhân tố\n",
     "5. Tính ma trận hệ số tải\n",
-    "6. Xoay nhân tố để đưa ma trận hệ số tải về dạng dễ đọc (dễ thấy nhìn ra nhóm)\n",
+    "6. Xoay nhân tố để đưa ma trận hệ số tải về dạng dễ đọc (dễ nhìn ra nhóm)\n",
     "7. Đặt tên nhân tố\n",
     "8. Điểm nhân tố"
    ]
