--- a/factor_analysis.ipynb
+++ b/factor_analysis.ipynb
@@ -1771,6 +1771,146 @@
     "factor_scores_case_1 = factor_scores_case_1.rename(columns=factor_names_case_1)\n",
     "print(f'Factor Scores (Case 1: {num_factors_case_1} factors):\\n', factor_scores_case_1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "a17b7cdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>In-flight Experience</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>-5.88</td>\n",
+       "      <td>-2.71</td>\n",
+       "      <td>-0.58</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>7.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Convenience</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>-6.91</td>\n",
+       "      <td>-1.89</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>5.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Service Quality</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>-5.58</td>\n",
+       "      <td>-2.13</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>8.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Punctuality</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>-58.89</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>1.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Flight Profile</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>-5.90</td>\n",
+       "      <td>-2.34</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>5.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Demographics</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>-3.69</td>\n",
+       "      <td>-1.23</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>5.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <td>25893.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>-3.50</td>\n",
+       "      <td>-0.96</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>3.84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        count  mean   std    min   25%   50%   75%   max\n",
+       "In-flight Experience  25893.0  -0.0  3.34  -5.88 -2.71 -0.58  2.34  7.81\n",
+       "Convenience           25893.0  -0.0  2.60  -6.91 -1.89 -0.12  1.82  5.78\n",
+       "Service Quality       25893.0   0.0  2.94  -5.58 -2.13 -0.27  2.09  8.62\n",
+       "Punctuality           25893.0   0.0  1.98 -58.89  0.11  0.64  0.80  1.12\n",
+       "Flight Profile        25893.0  -0.0  2.68  -5.90 -2.34 -0.05  2.51  5.67\n",
+       "Demographics          25893.0  -0.0  1.69  -3.69 -1.23 -0.39  0.73  5.39\n",
+       "Gender                25893.0   0.0  1.28  -3.50 -0.96 -0.05  0.92  3.84"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Thông kê mô tả điểm nhân tố\n",
+    "factor_scores_case_1.describe().round(2).T"
+   ]
   }
  ],
  "metadata": {
