--- a/factor_analysis.ipynb
+++ b/factor_analysis.ipynb
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "e1a0bd3c",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
     }
    ],
    "source": [
-    "# Chuẩn hoá các cột dữ liệu (Z-score) không là Binary hoặc Ordinal\n",
+    "# Chuẩn hoá (Z-score) các cột dữ liệu không là Binary hoặc Ordinal\n",
     "from utils import standardize_data\n",
     "columns_to_standardize = ['Age', 'Flight Distance', 'Departure Delay in Minutes', 'Arrival Delay in Minutes',\n",
     "                          'Inflight wifi service', 'Departure/Arrival time convenient', 'Ease of Online booking',\n",
